Fix getting BrowserActionsContainer target width when animating

The target width can be set to zero when the action bar has no
icons. Zero in this case is a valid target width that should be
used instead of the current width when animating.

BUG=831560

Change-Id: Ib6604a9c56a6b922025cd3d3bce2773f78d3eda4
Reviewed-on: https://chromium-review.googlesource.com/1008871
Commit-Queue: Ahmed Fakhry <afakhry@chromium.org>
Reviewed-by: Peter Kasting <pkasting@chromium.org>
Cr-Commit-Position: refs/heads/master@{#550658}
Former-commit-id: 1d26eda6c885bdfe90465742361a2f23c39919d4